--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -89,25 +89,147 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e532f4e9-0361-4580-bb86-ce0cbf15ed9f",
+   "cell_type": "markdown",
+   "id": "4867ca6b-66cc-4156-9bd0-b9c682800e97",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Creating Arrays Using Functions"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9a08cb35-bf8e-4d96-8728-49bdcf358b5d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.zeros(4)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a17d3d89-1c71-47b5-9a4e-cfaec8145590",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.zeros((3,3))\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4a08f7a1-5f58-432c-9e07-48a8e1d39269",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.ones(5)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "068226f1-0897-4c32-aee1-792cbdb548f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = np.ones((3,4,2))\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "cf4d6b40-314a-40da-869f-776a701879c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 7 7]\n",
+      " [7 7 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = np.full((2,3), 7)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d12ce39e-e83e-4569-b979-38b8c37152b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 2 4 6 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(0, 10, 2)\n",
+    "print(a)  "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a17d3d89-1c71-47b5-9a4e-cfaec8145590",
+   "id": "6246cbea-52ba-4b9f-8a38-17ebe39d2337",
    "metadata": {},
    "outputs": [],
    "source": []
