--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -228,8 +228,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "6246cbea-52ba-4b9f-8a38-17ebe39d2337",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.   0.25 0.5  0.75 1.  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.linspace(0, 1, 5)\n",
+    "print(a)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dddd21b-982b-423d-8462-d26ca1f4d0a9",
+   "metadata": {},
+   "source": [
+    "### Random Arrays in NumPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6a13a1ce-d4ec-4fa1-9e79-0fff8f2da78e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.42927636 0.38335125 0.12942757 0.81017006 0.86249483]\n",
+      "[[0.54506815 0.38008093 0.67864165]\n",
+      " [0.67717896 0.44304956 0.1047142 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.random.rand(5)  # 1D array\n",
+    "print(a)\n",
+    "\n",
+    "b = np.random.rand(2, 3)  # 2x3 matrix\n",
+    "print(b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7d6b586a-1567-40cf-be06-2dd5cb34773e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2 8 8 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(1,10,size=5)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0e88d431-e31c-467f-9709-c543357b7b25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10  4 13]\n",
+      " [17 16  5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.random.randint(1,20,size=(2,3))\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5117ff11-90c1-4284-ad7e-a4e5f7cc0894",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[16  5  4]\n",
+      " [ 8 15  9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(7)\n",
+    "b = np.random.randint(1,20,size=(2,3))\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a843d0f7-2324-41a9-b93b-f439339afa97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[16  5  4]\n",
+      " [ 8 15  9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(7)\n",
+    "x = np.random.randint(1,20,size=(2,3))\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "839c60bf-f9bb-4b15-871c-7391f73df356",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.15877062 -0.81377653  0.02006439 -0.34983013 -0.38108715]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.random.randn(5))  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8f65d84-b67a-432a-a027-0f32fd355285",
    "metadata": {},
    "outputs": [],
    "source": []
