--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -379,9 +379,183 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6b52c848-a885-4281-97da-a6a96d7b294a",
+   "metadata": {},
+   "source": [
+    "### Array Indexing & Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "db9ab22c-78e8-498d-b91c-7e2a72e79624",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20 30 40 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([10, 20, 30, 40, 50])\n",
+    "print(arr[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "7512f961-680e-43f2-af61-e3095848200a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 5]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr2d = np.array([[1, 2, 3],\n",
+    "                  [4, 5, 6],\n",
+    "                  [7, 8, 9]])\n",
+    "\n",
+    "print(arr2d[1:3, 0:2])  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "13cbef1c-9b27-438c-90ae-acd327aabd1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([10, 20, 30, 40])\n",
+    "print(arr[-1])   \n",
+    "print(arr[-2])   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39da24b8-14f7-47c8-bcdb-284f80ac669f",
+   "metadata": {},
+   "source": [
+    "### Array Reshaping:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "fcfa525c-66db-434d-8065-030c1c2b4807",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 3, 4, 5, 6])\n",
+    "reshaped = a.reshape(2, 3)\n",
+    "print(reshaped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "e0a324ba-5bab-4dc7-b769-784cb543c242",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2], [3, 4]]\n",
+      "[1 2 3 4]\n",
+      "[[1, 2], [3, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [[1, 2], [3, 4]]\n",
+    "b = np.array(arr)\n",
+    "print(arr)\n",
+    "print(b.ravel()) \n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "00f9bffc-adf3-482d-a45b-f946056b17e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3]\n",
+      " [7 8]]\n",
+      "[2 3 7 8]\n",
+      "[[2 3]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = [[2,3],[7,8]]\n",
+    "n = np.array(m)\n",
+    "print(n)\n",
+    "print(n.ravel())\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "991f0043-4a1e-430d-b589-1d86ca6d2834",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2], [3, 4]]\n",
+      "[1 2 3 4]\n",
+      "[[1, 2], [3, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [[1, 2], [3, 4]]\n",
+    "b = np.array(arr)\n",
+    "print(arr)\n",
+    "print(b.flatten()) \n",
+    "print(arr)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8f65d84-b67a-432a-a027-0f32fd355285",
+   "id": "c51d0c59-e5e1-4ecf-8cd0-3162283f215d",
    "metadata": {},
    "outputs": [],
    "source": []
