--- a/day_1.ipynb
+++ b/day_1.ipynb
@@ -554,8 +554,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "c51d0c59-e5e1-4ecf-8cd0-3162283f215d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original a:\n",
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "Ravel b:\n",
+      "[1 2 3 4]\n",
+      "After changing b:\n",
+      "a: [[99  2]\n",
+      " [ 3  4]]\n",
+      "b: [99  2  3  4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([[1, 2], [3, 4]])\n",
+    "b = a.ravel()\n",
+    "\n",
+    "print(\"Original a:\")\n",
+    "print(a)\n",
+    "\n",
+    "print(\"Ravel b:\")\n",
+    "print(b)\n",
+    "\n",
+    "b[0] = 99  # Change in raveled array\n",
+    "print(\"After changing b:\")\n",
+    "print(\"a:\", a)\n",
+    "print(\"b:\", b)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "868dbfd4-7890-4a4f-ac8f-a65e35da368a",
+   "metadata": {},
+   "source": [
+    "### Practice_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "57ad6ac3-865d-4e35-a6fd-052a447f616e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2D Array:\n",
+      " [[1 3 5]\n",
+      " [2 4 6]]\n",
+      "Shape: (2, 3)\n",
+      "Dimesion: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [[1,3,5],[2,4,6]]\n",
+    "np_arr = np.array(arr)\n",
+    "print(f\"2D Array:\\n {np_arr}\")\n",
+    "print(f\"Shape: {np_arr.shape}\")\n",
+    "print(f\"Dimesion: {np_arr.ndim}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "6a88a378-94e7-4e4d-ae48-212978d271f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 10 20 30 40 50 60 70 80 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.arange(0,91,10)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "b551c104-850a-4b5b-abea-8fa399f1b664",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 11  6]\n",
+      " [19 12  5]\n",
+      " [16  0  2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.random.randint(0,20, size=(3,3))\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "899c10a5-4370-418f-ac7c-49a3dcb4e689",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e940c17-d13e-4a54-8fe7-1d01a31c56b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a37b0c7-68a5-44d7-b83a-87d119c418ed",
    "metadata": {},
    "outputs": [],
    "source": []
